# vendeta

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: pages.yml  security-audit.yml
contracts/: foundry.toml
contracts/deployments/: base-sepolia.json
contracts/script/: Deploy.s.sol
contracts/src/: VendClaim.sol  VendRegistry.sol  VendRewards.sol  VendTrust.sol
contracts/src/interfaces/: IVendRegistry.sol  IVendRewards.sol  IVendTrust.sol
contracts/test/: VendClaim.t.sol  VendRegistry.t.sol  VendRewards.t.sol  VendTrust.t.sol
core/: Cargo.toml
core/src/: currency.rs  ean.rs  geohash.rs  hash.rs  lib.rs  location.rs  wallet.rs
docs/: MIGRATION_SECURITY_MEMO.md  index.html  masterplan.md  todo.html
docs/architecture/: audit-report.md  contracts-draft.md  data-flow.md  decisions.md  economy.md  geohash-strategy.md  ifr-builder-registration.md  ifr-builder.md  open-questions.md  risk-register.md  security-audit.md  trust-system.md  ux-design.md  wallet.md
docs/changelogs/: 2026-03-17.md
docs/landing/: index.html
docs/wiki/: Home.md  Smart-Contracts.md  The-Graph.md  Wallet.md  user-guide.html
mobile/: README.md  pubspec.yaml
mobile/ios/Runner/: Info.plist
mobile/lib/: main.dart
mobile/rust/: Cargo.toml
mobile/test/: widget_test.dart
subgraph/: package-lock.json  package.json  schema.graphql  subgraph.yaml
subgraph/abis/: VendClaim.json  VendRegistry.json  VendRewards.json  VendTrust.json
subgraph/src/: claim.ts  helpers.ts  registry.ts  rewards.ts  trust.ts
(+26 files in other folders)
