[package]
name = "vendeta-core"
version = "0.1.0"
edition = "2021"
description = "Vendetta Core Library"

[lib]
name = "vendeta_core"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
sha2    = "0.10"
hex     = "0.4"
hmac    = "0.12"
serde   = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono  = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"
strip = true
lto = true
