[package]
name = "vendeta-core"
version = "0.1.0"
edition = "2021"
description = "Vendetta Core Library"

[lib]
name = "vendeta_core"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
sha2       = "0.10"
hex        = { version = "0.4", features = ["serde"] }
hmac       = "0.12"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono     = { version = "0.4", features = ["serde"] }
bip39      = { version = "2.0", features = ["rand"] }
bip32      = "0.5"
k256       = { version = "0.13", features = ["ecdsa"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
rand       = "0.8"
thiserror  = "1.0"

[profile.release]
opt-level = "z"
strip = true
lto = true
